SERVER-24357 Coverity analysis defect 99580: Unsafe assignment operator